# serlo-he-spec

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs  serde.rs  util.rs
generate/: Cargo.toml
generate/src/: files.rs  generate.rs  main.rs
generate/src/editor_ts/: edit.rs  mod.rs  renderer.rs  templates.rs
meta/: Cargo.toml
meta/src/: lib.rs
src/: files.rs  he_plugins.yml  lib.rs  main.rs  mfnf.rs  mfnf_example.json  plugins.rs  test_spec.yml
