[package]
name = "serlo-he-spec"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]
edition = "2018"

[[bin]]
name = "serlo_specgen"
path = "src/main.rs"
doc = true

[features]
mfnf = ["mediawiki_parser"]

[dependencies]
serlo_he_spec_derive = { path = "derive" }
serlo_he_spec_meta = { path = "meta" }
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
structopt = "0.2"
mediawiki_parser = { version = "0.4", optional = true }
mwparser_utils = { git = "https://github.com/vroland/mediawiki-parser-utils.git" , optional = true}
