[package]
name = "serlo_he_spec"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]
edition = "2018"

[dependencies]
serlo_he_spec_derive = { path = "derive" }
serlo_he_spec_meta = { path = "meta" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
