[package]
name = "serlo_he_spec_derive"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
quote = "0.6"
proc-macro2 = "0.4"
uuid = { version = "0.7", features = ["serde", "v5"] }
serlo_he_spec_meta = { path = "../meta" }
